// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Blog /> renders Blog component without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UNDEFINED
    addblog={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        null,
        <div
          className="blog-item"
        >
          <div
            className="float-right tiny-font"
          >
            <span
              id="cancelBtn"
            >
              Cancel
            </span>
             | 
            <span
              id="submitbtn"
            >
              Submit
            </span>
          </div>
          <input
            maxLength="200"
            name="blogheader"
            onKeyUp={[Function]}
            placeholder="Header goes here"
            size="104"
            type="text"
          />
          <br />
          <textarea
            cols="95"
            name="blogbody"
            placeholder="Body goes here"
            rows="10"
          />
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="float-right tiny-font"
            >
              <span
                id="cancelBtn"
              >
                Cancel
              </span>
               | 
              <span
                id="submitbtn"
              >
                Submit
              </span>
            </div>,
            <input
              maxLength="200"
              name="blogheader"
              onKeyUp={[Function]}
              placeholder="Header goes here"
              size="104"
              type="text"
            />,
            <br />,
            <textarea
              cols="95"
              name="blogbody"
              placeholder="Body goes here"
              rows="10"
            />,
          ],
          "className": "blog-item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  id="cancelBtn"
                >
                  Cancel
                </span>,
                " | ",
                <span
                  id="submitbtn"
                >
                  Submit
                </span>,
              ],
              "className": "float-right tiny-font",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Cancel",
                  "id": "cancelBtn",
                  "onClick": undefined,
                },
                "ref": null,
                "rendered": "Cancel",
                "type": "span",
              },
              " | ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Submit",
                  "id": "submitbtn",
                  "onClick": undefined,
                },
                "ref": null,
                "rendered": "Submit",
                "type": "span",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "maxLength": "200",
              "name": "blogheader",
              "onChange": undefined,
              "onKeyUp": [Function],
              "placeholder": "Header goes here",
              "size": "104",
              "type": "text",
            },
            "ref": [Function],
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "cols": "95",
              "name": "blogbody",
              "onChange": undefined,
              "placeholder": "Body goes here",
              "rows": "10",
            },
            "ref": [Function],
            "rendered": null,
            "type": "textarea",
          },
        ],
        "type": "div",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          null,
          <div
            className="blog-item"
          >
            <div
              className="float-right tiny-font"
            >
              <span
                id="cancelBtn"
              >
                Cancel
              </span>
               | 
              <span
                id="submitbtn"
              >
                Submit
              </span>
            </div>
            <input
              maxLength="200"
              name="blogheader"
              onKeyUp={[Function]}
              placeholder="Header goes here"
              size="104"
              type="text"
            />
            <br />
            <textarea
              cols="95"
              name="blogbody"
              placeholder="Body goes here"
              rows="10"
            />
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="float-right tiny-font"
              >
                <span
                  id="cancelBtn"
                >
                  Cancel
                </span>
                 | 
                <span
                  id="submitbtn"
                >
                  Submit
                </span>
              </div>,
              <input
                maxLength="200"
                name="blogheader"
                onKeyUp={[Function]}
                placeholder="Header goes here"
                size="104"
                type="text"
              />,
              <br />,
              <textarea
                cols="95"
                name="blogbody"
                placeholder="Body goes here"
                rows="10"
              />,
            ],
            "className": "blog-item",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    id="cancelBtn"
                  >
                    Cancel
                  </span>,
                  " | ",
                  <span
                    id="submitbtn"
                  >
                    Submit
                  </span>,
                ],
                "className": "float-right tiny-font",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Cancel",
                    "id": "cancelBtn",
                    "onClick": undefined,
                  },
                  "ref": null,
                  "rendered": "Cancel",
                  "type": "span",
                },
                " | ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Submit",
                    "id": "submitbtn",
                    "onClick": undefined,
                  },
                  "ref": null,
                  "rendered": "Submit",
                  "type": "span",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "maxLength": "200",
                "name": "blogheader",
                "onChange": undefined,
                "onKeyUp": [Function],
                "placeholder": "Header goes here",
                "size": "104",
                "type": "text",
              },
              "ref": [Function],
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "cols": "95",
                "name": "blogbody",
                "onChange": undefined,
                "placeholder": "Body goes here",
                "rows": "10",
              },
              "ref": [Function],
              "rendered": null,
              "type": "textarea",
            },
          ],
          "type": "div",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Blogs /> <Blogs /> should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Blogs />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <header>
          <h2>
            B L O G S (
            <span
              className="action-new"
              onClick={[Function]}
              title="Add New"
            >
              +
            </span>
            )
          </h2>
          <span>
            <input
              id="search-bar"
              onChange={[Function]}
              placeholder="Search text"
              type="text"
              value=""
            />
          </span>
        </header>,
        <div
          className="blog-item message-container"
          style={
            Object {
              "color": "lightgreen",
            }
          }
        >
          No Search Results to display !
        </div>,
        <UNDEFINED
          fallback={
            <h1>
              Loading...
            </h1>
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2>
              B L O G S (
              <span
                className="action-new"
                onClick={[Function]}
                title="Add New"
              >
                +
              </span>
              )
            </h2>,
            <span>
              <input
                id="search-bar"
                onChange={[Function]}
                placeholder="Search text"
                type="text"
                value=""
              />
            </span>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "B L O G S (",
                <span
                  className="action-new"
                  onClick={[Function]}
                  title="Add New"
                >
                  +
                </span>,
                ")",
              ],
            },
            "ref": null,
            "rendered": Array [
              "B L O G S (",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "+",
                  "className": "action-new",
                  "onClick": [Function],
                  "title": "Add New",
                },
                "ref": null,
                "rendered": "+",
                "type": "span",
              },
              ")",
            ],
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <input
                id="search-bar"
                onChange={[Function]}
                placeholder="Search text"
                type="text"
                value=""
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "id": "search-bar",
                "onChange": [Function],
                "placeholder": "Search text",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            "type": "span",
          },
        ],
        "type": "header",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "No Search Results to display !",
          "className": "blog-item message-container",
          "style": Object {
            "color": "lightgreen",
          },
        },
        "ref": null,
        "rendered": "No Search Results to display !",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [],
          "fallback": <h1>
            Loading...
          </h1>,
        },
        "ref": null,
        "rendered": Array [],
        "type": Symbol(react.suspense),
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <header>
            <h2>
              B L O G S (
              <span
                className="action-new"
                onClick={[Function]}
                title="Add New"
              >
                +
              </span>
              )
            </h2>
            <span>
              <input
                id="search-bar"
                onChange={[Function]}
                placeholder="Search text"
                type="text"
                value=""
              />
            </span>
          </header>,
          <div
            className="blog-item message-container"
            style={
              Object {
                "color": "lightgreen",
              }
            }
          >
            No Search Results to display !
          </div>,
          <UNDEFINED
            fallback={
              <h1>
                Loading...
              </h1>
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                B L O G S (
                <span
                  className="action-new"
                  onClick={[Function]}
                  title="Add New"
                >
                  +
                </span>
                )
              </h2>,
              <span>
                <input
                  id="search-bar"
                  onChange={[Function]}
                  placeholder="Search text"
                  type="text"
                  value=""
                />
              </span>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "B L O G S (",
                  <span
                    className="action-new"
                    onClick={[Function]}
                    title="Add New"
                  >
                    +
                  </span>,
                  ")",
                ],
              },
              "ref": null,
              "rendered": Array [
                "B L O G S (",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "+",
                    "className": "action-new",
                    "onClick": [Function],
                    "title": "Add New",
                  },
                  "ref": null,
                  "rendered": "+",
                  "type": "span",
                },
                ")",
              ],
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <input
                  id="search-bar"
                  onChange={[Function]}
                  placeholder="Search text"
                  type="text"
                  value=""
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "id": "search-bar",
                  "onChange": [Function],
                  "placeholder": "Search text",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              "type": "span",
            },
          ],
          "type": "header",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "No Search Results to display !",
            "className": "blog-item message-container",
            "style": Object {
              "color": "lightgreen",
            },
          },
          "ref": null,
          "rendered": "No Search Results to display !",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [],
            "fallback": <h1>
              Loading...
            </h1>,
          },
          "ref": null,
          "rendered": Array [],
          "type": Symbol(react.suspense),
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
